# energy-demand-forecasting

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  artifacts.dvc  config.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: data_pipeline.yaml  feature_pipeline.yaml  monitor_pipeline.yaml  train_pipeline.yaml
artifacts/: model.pkl
notebooks/: energy-demand-forecasting.ipynb
src/: config.py  data.py  database.py  forecast.py  inference.py  ingest.py  logger.py  model.py  monitor.py  pipeline.py  train.py  transform.py  utils.py
src/pipelines/: backfill.py  feature.py  inference.py  train.py
