[project]
name = "src"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.10.14"
dependencies = [
    "catboost>=1.2.7",
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "notebook>=7.3.2",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.21.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.0",
    "python-dotenv>=1.0.1",
    "scikit-learn==1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.37",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
    "tzlocal>=5.2",
    "watchdog>=6.0.0",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
indent = 4
lines_between_types = 1
known_first_party = ["src"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
