[project]
name = "src"
version = "0.1.0"
description = "End-to-end project for forecasting hourly energy demand"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "catboost>=1.2.8",
    "dvc>=3.65.0",
    "dvc-gdrive>=3.0.1",
    "hyperopt>=0.2.7",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "polars==1.32.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn==1.2.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "notebook>=7.5.1",
    "plotly>=6.5.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "seaborn>=0.13.2",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
indent = 4
lines_between_types = 1
known_first_party = ["src"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pylint]
disable = ["W1401", "R0903"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
